--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rocketseat/unform": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -23,12 +24,13 @@
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "yup": "^0.28.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
@@ -49,16 +51,17 @@
     ]
   },
   "devDependencies": {
-    "add": "^2.0.6",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-root-import": "^6.4.1",
-    "eslint": "^6.8.0",
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/addon-centered": "^5.2.5",
     "@storybook/addon-info": "^5.2.5",
     "@storybook/addon-links": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
+    "add": "^2.0.6",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-root-import": "^6.4.1",
+    "customize-cra": "^0.9.1",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
@@ -69,6 +72,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.5",
     "yarn": "^1.22.0"
   }
 }
